# DocMirror

./: .dockerignore  .env.example  .gitattributes  .gitignore  .import-linter.yml  .importlinter  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh-CN.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart.md  sitemap.xml
.github/ISSUE_TEMPLATE/: bad_document.yml
.github/PULL_REQUEST_TEMPLATE/: projection_template.md
.github/constraints/: ci.txt
.github/releases/: v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.8.md  v1.1.0.md  v1.1.1.md  v1.1.2.md
.github/workflows/: adaptive-routing-regression.yml  benchmark-regression.yml  ci.yml  clean-architecture.yml  docs.yml  nightly-enterprise.yml  nightly-golden.yml  nightly-private.yml  publish-benchmarks.yml  publish-sdks.yml  publish.yml  validate-pdfua.yml  validate-projection-templates.yml
adr/0001-community-json-self-contained/: index.html
adr/0002-p0-canonical-fact-pipeline/: index.html
adr/0003-p1-core-stability-qualification/: index.html
adr/0004-p2-plugin-resource-ownership/: index.html
api-authentication/: index.html
community-schema-migration-2.2-to-3.0/: index.html
compatibility-retirement/: index.html
deployment/: index.html
development_manual_zh-CN/: index.html
docmirror/: __init__.py  __main__.py  edition_facade.py  plugin_api.py  sdk.py
docmirror/adapters/: __init__.py  email.py  excel.py  pdf.py  ppt.py  structured.py  web.py  word.py
docmirror/cli/: __init__.py  benchmark.py  classify.py  classify_engine.py  classify_report.py  explainability_commands.py  license_cli.py  main.py  mcp.py  ocr_correction.py  pdfua.py  plugins.py  support_bundle.py
docmirror/configs/: __init__.py  classification_rules.yaml  column_aliases.yaml  commitment.py  docmirror.yaml  domain_registry.py  failure_codes.py  ga_experience.py  ga_readiness.py  hints.yaml  institution_registry.yaml  layout_profiles.yaml  output_profile.py  paths.py  performance.py  pipeline_registry.py  resolver_weights.yaml  scene_keywords.yaml  settings.py  support_matrix.py
docmirror/core/: __init__.py  exceptions.py  extension_points.py  factory.py  perceive_result.py  result.py
docmirror/deployment/: __init__.py  health.py  web_visualizer.py
docmirror/di/: __init__.py  container.py
docmirror/domains/: __init__.py  base.py  registry.py
docmirror/errors/: __init__.py  envelope.py
docmirror/eval/: __init__.py  benchmark_manifest.py  benchmark_runner.py  gates.py  golden_loader.py  metrics.py  oracle.py  structure_diff.py  structure_gate_metrics.py
docmirror/evidence/: __init__.py  bundle.py  diff_canonicalizer.py  diff_engine.py  failure_policy.py  ledger.py  overlay_manifest.py  plane.py  quality.py  quality_decision.py  redaction.py  repair.py  source_resolver.py  source_span.py  spe_consumer.py  structure_provenance.py  visual.py  visual_graph.py
docmirror/exporters/: dispatch.py  document_flow.py  markdown.py  mathml.py  rag_chunks.py  sql_orm.py  tabular.py
docmirror/features/: __init__.py
docmirror/framework/: __init__.py  base.py  cache.py  dispatcher.py  edition_defaults.py  execution_fingerprint.py  extension_points.py  extraction_runner.py  orchestrator.py
docmirror/geometry/: __init__.py  bbox.py  pdfplumber_native.py  table_attrs.py  table_geometry.py
docmirror/input/: __init__.py  acceptance.py  archive_probe.py  image_probe.py  models.py  pdf_probe.py
docmirror/integration/: __init__.py  errors.py  service.py
docmirror/layout/: __init__.py  columns.py  structural_classifier.py  structure_signals.py  vocabulary.py
docmirror/middlewares/: __init__.py  base.py  registry.py
docmirror/models/: __init__.py  edition_serializer.py  ehl.py  (+8 more)
docs/: COMMERCIAL.md  api-authentication.md  api-reference.md  architecture.md  commercial-distribution-guide.md  community-schema-migration-2.2-to-3.0.md  compatibility-retirement.md  configuration.md  contributing.md  creating-plugins.md  deployment.md  development_manual_zh-CN.md  error-handling.md  external-ocr.md  index.md  installation.md  markdown_profile_zh-CN.md  overview.md  plg-strategies.md  quickstart.md  testing.md
examples/: doc_sorter.py  promo_demo.py  trust_quickstart.py
installation/: index.html
markdown_profile_zh-CN/: index.html
quickstart/: index.html
reports/: ccp_test_audit.json  ci_core_import_audit.json  core_import_audit.json  hygiene.json  hygiene.md  hygiene_ruff.json  hygiene_sprint1.md
schemas/: evidence_bundle.schema.json  mirror.schema.json
scripts/: README_quality_gate.md  audit_core_imports.py  bench_bank_fixtures.py  benchmark_adaptive_routing.py  benchmark_competitors.py  compare_benchmark_regression.py  docmirror_diagnostic.py  extract_overall_f1.py  generate_benchmark_table.py  generate_openapi.py  generate_synthetic_golden_pdfs.py  run_first_benchmark.py  run_opendataloader_baseline.py  run_quality_gate.py  validate_core_cps_layout.py  validate_core_god_files.py  validate_pdfua.py  validate_post_extract.py
sdks/: CONTRIBUTING.md
search/: search_index.json
tests/: README.md  __init__.py  _community_reading.py  _credit_report_golden.py  _scanned_ocr_helpers.py  conftest.py  profile_parse.py  test_domain_registry.py  test_edition_schema_conformance.py  test_imports.py  test_integration.py  test_models.py  test_omml_extractor.py  test_plugins.py  test_quality_router.py  test_semantic_closure_direct.py  test_server.py  test_settings.py
tests/external_plugins/reference_provider/: pyproject.toml
tests/external_plugins/reference_provider/src/docmirror_reference_provider/: __init__.py  provider.py
tests/external_plugins/reference_provider/src/docmirror_reference_provider/resources/: classification.yaml
tools/: batch_bank_statement_audit.py  fold_mirror_to_page_canvas.py  gate_pcm_legacy_refs.py  generate_classify_text_samples.py  pin_scanned_page_snapshot.py  sync_finance_plugins.py  sync_fixture_registry.py  sync_golden_manifest.py  test_scene_coverage.py  validate_format_capabilities.py  validate_test_manifest.py
(+1971 files in other folders)
