[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "docmirror",
]
exclude = [
    "docmirror/plugins/_archive",
    "docmirror/tools",
]

[tool.hatch.build.targets.wheel.enterprise]
packages = [
    "docmirror",
    "docmirror_enterprise",
]

[project]
name = "docmirror"
version = "0.5.0"
description = "Universal document parsing engine with OCR, layout analysis, and table extraction"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = [
    "document-parsing",
    "ocr",
    "pdf",
    "table-extraction",
    "layout-analysis",
    "document-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pydantic>=2.0",
    "filetype>=1.2",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
enterprise = ["docmirror-enterprise>=0.4.0"]
pdf = ["PyMuPDF>=1.23", "pdfplumber>=0.10"]
ocr = ["rapidocr-onnxruntime>=1.3", "opencv-python-headless>=4.8", "numpy>=1.24"]
layout = ["rapid-layout>=0.1"]
table = ["rapid-table>=0.2"]
formula = ["rapid-latex-ocr>=0.0.6"]
office = ["python-docx>=1.0", "openpyxl>=3.1", "python-pptx>=0.6"]
security = ["pikepdf>=8.0"]
cache = ["redis>=5.0"]
langdetect = ["fast-langdetect>=0.2"]
server = ["fastapi>=0.100", "uvicorn>=0.23.0", "python-multipart>=0.0.9"]
archive = ["rarfile>=4.0"]
all = [
    "docmirror[pdf,ocr,layout,table,formula,office,security,cache,langdetect,server,archive,enterprise]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "coverage>=7.4",
    "pre-commit>=3.5",
    "import-linter>=2.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C901"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module import not at top — intentional lazy imports
    "E741",   # ambiguous variable name (l, O, I) — common in math/loops
    "F401",   # unused import — re-exports in __init__.py
    "F811",   # redefined-while-unused — re-exports
    "F821",   # undefined name — Pydantic forward references
    "UP035",  # deprecated-import — keep typing.* for Python 3.10 compat
    "C901",   # complex-structure — parsing functions are inherently complex
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring fixtures",
    "slow: slow tests (full-document extract)",
    "benchmark: timing benchmark tests (opt-in via DOCMIRROR_RUN_BENCHMARK=1)",
    "tier_smoke: Tier SMOKE — PR must run, target < 60s",
    "tier_contract: Tier CONTRACT — PR must run, mock-heavy boundary tests",
    "tier_regression: Tier REGRESSION — golden manifest gates",
    "tier_slow: Tier REGRESSION full document — nightly only",
    "tier_benchmark: opt-in benchmark tier",
    "track_extract: table/core extract gates",
    "track_classify: DTI / document_type gates",
    "track_mirror: MEP mirror quality gates",
    "track_edition: PEC / DEC edition gates",
    "track_e2e: CLI/API/full perceive gates",
    "track_transport: FCR format capability and routing gates",
    "track_licensing: PEC entitlement and LEP lifecycle gates",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["docmirror"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.importlinter]
root_package = "docmirror"

[[tool.importlinter.contracts]]
name = "CCP — plugins must not import core internals"
type = "forbidden"
source_modules = ["docmirror.plugins"]
forbidden_modules = [
    "docmirror.core.extraction.extractor",
    "docmirror.core.segment.zones",
    "docmirror.core.extract.engine",
    "docmirror.core.ocr.fallback",
]


