[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.github",
    "/.github/**",
    "/.dockerignore",
    "/.env.example",
    "/.gitattributes",
    "/.import_linter_cache",
    "/.import_linter_cache/**",
    "/.importlinter",
    "/.pre-commit-config.yaml",
    "/.pytest_cache",
    "/.ruff_cache",
    "/artifacts",
    "/artifacts/**",
    "/dist",
    "/docker-compose.yml",
    "/Dockerfile",
    "/docs",
    "/docs/**",
    "/docmirror/plugins/.plugin_state.json",
    "/docmirror_enterprise",
    "/docmirror_enterprise/**",
    "/docmirror_finance",
    "/docmirror_finance/**",
    "/examples",
    "/examples/**",
    "/mkdocs.yml",
    "/reports",
    "/reports/**",
    "/scripts",
    "/scripts/**",
    "/sdks",
    "/sdks/**",
    "/tests",
    "/tests/**",
]

[tool.hatch.build.targets.wheel]
packages = [
    "docmirror",
]

[tool.hatch.build.targets.wheel.enterprise]
packages = [
    "docmirror",
    "docmirror_enterprise",
]

[project]
name = "docmirror"
version = "1.0.0"
description = "Commercial Document Trust Layer for verifiable, audit-ready document signals"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = [
    "commercial-documents",
    "trust-layer",
    "evidence-extraction",
    "audit-ready",
    "document-parsing",
    "field-evidence",
    "document-trust",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "filetype>=1.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
docmirror = "docmirror.cli.main:main"

[project.urls]
Homepage = "https://valuemapglobal.github.io/DocMirror/"
Documentation = "https://valuemapglobal.github.io/DocMirror/"
Repository = "https://github.com/valuemapglobal/DocMirror"
Issues = "https://github.com/valuemapglobal/DocMirror/issues"
Changelog = "https://github.com/valuemapglobal/DocMirror/blob/main/CHANGELOG.md"

[project.optional-dependencies]
enterprise = ["docmirror-enterprise>=0.4.0"]
pdf = ["PyMuPDF>=1.23", "pdfplumber>=0.10", "pypdf>=4.0"]
ocr = ["rapidocr-onnxruntime>=1.3", "opencv-python-headless>=4.8", "numpy>=1.24"]
layout = ["rapid-layout>=0.1"]
table = ["rapid-table>=0.2"]
formula = ["rapid-latex-ocr>=0.0.6"]
office = ["python-docx>=1.0", "openpyxl>=3.1", "python-pptx>=0.6"]
security = ["pikepdf>=8.0"]
cache = ["redis>=5.0"]
langdetect = ["fast-langdetect>=0.2"]
server = ["fastapi>=0.100", "uvicorn>=0.23.0", "python-multipart>=0.0.9"]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index>=0.10"]
haystack = ["haystack-ai>=2.0"]
projection = ["PyYAML>=6.0"]
mcp = ["mcp>=1.0"]
archive = ["rarfile>=4.0"]
plugins = ["pluggy>=1.5"]
ai = ["openai>=1.0", "google-generativeai>=0.8", "requests>=2.31"]
ocr-tesseract = ["pytesseract>=0.3"]
all = [
    "docmirror[pdf,ocr,layout,table,formula,office,security,cache,langdetect,server,archive]",
    "docmirror[langchain]",
    "docmirror[llamaindex]",
    "docmirror[haystack]",
    "docmirror[projection]",
    "docmirror[mcp]",
    "docmirror[plugins]",
    "docmirror[ai]",
    "docmirror[ocr-tesseract]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.100",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "lxml>=5.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "requests>=2.31",
    "ruff>=0.3",
    "mypy>=1.8",
    "coverage>=7.4",
    "pre-commit>=3.5",
    "import-linter>=2.0",
    "vulture>=2.11",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C901"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module import not at top — intentional lazy imports
    "E741",   # ambiguous variable name (l, O, I) — common in math/loops
    "F401",   # unused import — re-exports in __init__.py
    "F811",   # redefined-while-unused — re-exports
    "F821",   # undefined name — Pydantic forward references
    "UP035",  # deprecated-import — keep typing.* for Python 3.10 compat
    "C901",   # complex-structure — parsing functions are inherently complex
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
known-first-party = ["docmirror"]
known-third-party = ["docmirror_enterprise", "docmirror_finance"]

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401", "F811"]

[tool.vulture]
 exclude = [
     "tests/",
     ".venv/",
]
ignore_decorators = [
    "@app.on_event",
    "@router.get",
    "@router.post",
    "@pytest.fixture",
]
min_confidence = 80
paths = ["docmirror", "scripts", "tools"]
sort_by_size = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: legacy contract marker",
    "smoke: legacy smoke marker",
    "unit: legacy unit marker",
    "integration: integration tests requiring fixtures",
    "slow: slow tests (full-document extract)",
    "benchmark: timing benchmark tests (opt-in via DOCMIRROR_RUN_BENCHMARK=1)",
    "tier_smoke: Tier SMOKE — PR must run, target < 60s",
    "tier_contract: Tier CONTRACT — PR must run, mock-heavy boundary tests",
    "tier_regression: Tier REGRESSION — golden manifest gates",
    "tier_e2e: Tier E2E — CLI/API/full perceive smoke flows",
    "tier_slow: Tier REGRESSION full document — nightly only",
    "tier_benchmark: opt-in benchmark tier",
    "tier_unit: Tier UNIT — fine-grained unit tests (single class/function level)",
    "track_extract: table/core extract gates",
    "track_classify: DTI / document_type gates",
    "track_mirror: MEP mirror quality gates",
    "track_mirror_structure: SSO/SPE/SDU mirror structure gates",
    "track_mirror_conservation: EFMP conservation gates",
    "track_mirror_geometry: Mirror geometry conservation gates",
    "track_scanned_micro_grid: Scanned micro-grid reconstruction gates",
    "track_scanned_local_structure: Scanned local structure restoration gates",
    "track_vnext_page_topology: Page-centric mirror (PageProjection) region gates",
    "track_dual_view: dual-view consistency gates",
    "track_bank_statement: bank statement plugin CQF/BLO gates",
    "track_edition: PEC / DEC edition gates",
    "track_e2e: CLI/API/full perceive gates",
    "track_transport: FCR format capability and routing gates",
    "track_licensing: PEC entitlement and LEP lifecycle gates",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["docmirror"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
