[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docmirror-reference-provider"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["docmirror"]

[project.entry-points."docmirror.plugins"]
reference = "docmirror_reference_provider.provider"

[tool.setuptools.packages.find]
where = ["src"]
