[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docmirror-reference-provider"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = ["docmirror"]

[project.entry-points."docmirror.plugins"]
reference = "docmirror_reference_provider.provider"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docmirror_reference_provider = ["resources/*.yaml"]
